# mdut

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  justfile  modd.conf  pyproject.toml
.github/workflows/: automated_checks.yml
mdut/: __init__.py  mdut.py
src/mdut/: __init__.py  mdut.py
tests/: __init__.py  test_extract_title.py  test_generate_tag.py
