[tool.poetry]
name = "mdut"
version = "2022.0.0"
description = "Markdown URL tag generator"
authors = ["Nik Kantar <nik@nkantar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.1"
beautifulsoup4 = "^4.10.0"
pyperclip = "^1.8.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
mypy = "^0.930"
flake8 = "^4.0.1"
types-beautifulsoup4 = "^4.10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
