[tool.poetry]
name = "mdut"
version = "22.3.1"
description = "Markdown URL tag generator"
license = "MIT"
authors = ["Nik Kantar <nik@nkantar.com>"]
readme = "README.md"
homepage = "https://github.com/nkantar/mdut"
repository = "https://github.com/nkantar/mdut"
documentation = "https://github.com/nkantar/mdut"

keywords = ["markdown"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
  "Typing :: Typed",
]

packages = [
  { include = "mdut" },
]

include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.21.1"
beautifulsoup4 = "^4.10.0"
pyperclip = "^1.8.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
mypy = "^0.930"
flake8 = "^4.0.1"
types-beautifulsoup4 = "^4.10.7"

[tool.poetry.scripts]
mdut = "mdut.mdut:mdut"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
