[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdut"
version = "22.6.0"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "pyperclip>=1.9.0",
    "click>=8.1.7",
]
requires-python = ">=3.9"
authors = [
    {name = "Nik Kantar", email = "nik@nkantar.com" },
]
description = "Markdown URL tag generator"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[project.scripts]
mdut = "src.mdut:mdut"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "mypy>=1.11.2",
    "pdbpp>=0.10.3",
    "types-beautifulsoup4>=4.12.0.20240511",
]
